--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.0",
     "sass": "^1.55.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
